Added Report Command
Attempting to add /report command to send a message to staff when a
player files the report.  General Cleanup.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -27,3 +27,12 @@ commands:
     description: Check the map status.
   test:
     description: so yeah tests woo.
+  report:
+    description: Files a report against a player for staff to investigate.
+    permission: rixor.staff
+    usage: /report <playername> <message>
+
+permissions:
+  rixor.staff:
+    default: false
+    description: Staff need this to get the report that a player files.
